<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marica.m_note.AddNote"
    tools:showIn="@layout/activity_add_note"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:onClick="done_click"
        android:contentDescription="@string/done_button"
        android:src="@drawable/ic_done_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/undo_button"
        android:src="@drawable/ic_undo_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="60dp" />

    <ImageView
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/redo_button"
        android:src="@drawable/ic_redo_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp" />

    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/attach_button"
        android:src="@drawable/ic_attach_file_black_24dp"
        android:onClick="attach_click"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp" />

    <ImageView
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:onClick="camera_click"
        android:contentDescription="@string/camera_button"
        android:src="@drawable/ic_photo_camera_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/more_button"
        android:src="@drawable/ic_more_vert_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5">

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <EditText
                android:fontFamily="casual"
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="Note Title"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_below="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/notebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notebook ;"
                android:fontFamily="casual"
                android:textSize="20sp"/>
            <Spinner
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:id="@+id/spinner"
                android:layout_toRightOf="@+id/notebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

        </LinearLayout>

       <LinearLayout
           android:id="@+id/linearlayout3"
           android:layout_below="@id/linearlayout2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <ImageView
               android:id="@+id/imageview"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:visibility="gone"
               android:adjustViewBounds="true"
               android:onClick="imageView"/>
           <EditText
               android:hint="What are you thinking"
               android:layout_marginTop="20dp"
               android:id="@+id/note_details"
               android:textSize="16dp"
               android:fontFamily="casual"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/linearlayout2"
               android:background="#fff"/>
       </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
